--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "request": "latest"
+    "request": "latest",
+    "cheerio": "latest"
   }
 }
